infrastructure/modules/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: howlapp
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
