infrastructure/modules/nginx/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
    name: consul-gateway
    namespace: howlapp
spec:
    gatewayClassName: consul-api-gateway
    listeners:
        - protocol: HTTP
          port: 80
          name: http
          allowedRoutes:
              namespaces:
                  from: Same
