infrastructure/modules/nginx/routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gateway
  namespace: howlapp
spec:
  parentRefs:
    - name: consul-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: nginx
          namespace: howlapp
          port: 80
